style.css
:root {
  --primary-color: #6c63ff;
  --secondary-color: #f5f2fe;
  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
}

h1,
h2,
h3 {
  text-align: center;
  margin: 0;
}

h1 {
  font-size: 96px;
}

h2 {
  font-size: 48px;
}

h3 {
  font-size: 24px;
  opacity: 0.7;
}

p {
  padding: 20px;
  border-radius: 4px;
  font-size: 18px;
  line-height: 1.5;
  text-align: center;
}

.greeting {
  margin-top: 60px;
}

.center {
  text-align: center;
}

.navigation-links {
  display: flex;
  margin-top: 40px;
  justify-content: center;
}

.navigation-links a {
  margin: 20px;
  border-radius: 4px;
  padding: 20px 15px;
  text-decoration: none;
  text-transform: capitalize;
}

.contact-link {
  background: var(--primary-color);
  box-shadow: var(--box-shadow);
  color: white;
}

.about-link {
  color: var(--primary-color);
  border: 1px solid var(--primary-color);
}

.abt-img {
  height: auto;
}

.homepage-link {
  color: var(--primary-color);
  text-align: center;
  display: block;
}

.primary-link {
  background-color: #6c63ff;
  color: #ffff;
  text-decoration: none;
  border-radius: 4px;
  padding: 20px 15px;
  text-align: center;
  box-shadow: var(--box-shadow);
}

.about-paragraphs {
  display: flex;
  margin: 30px 0;
}

.about-paragraphs p {
  margin: 10px;
}

.email-link {
  display: flex;
  justify-content: center;
  color: var(--primary-color);
  font-size: 28px;
  text-decoration: none;
  margin-bottom: 50px;
}

.email-link:hover {
  text-decoration: underline;
}

@media (max-width: 576px) {
  h1 {
    font-size: 48px;
  }
  h2 {
    font-size: 32px;
  }
  h3 {
    font-size: 24px;
  }
  .primary-link {
    display: block;
    text-align: center;
    margin: 0 20px;
  }
}

